Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,6 +1,6 @@
 #summary One-sentence summary of this page.
 
-= ScriptDev2 Projekt von Cyberneticworld =
+= ScriptDev2-Projekt von Cyberneticworld =
 
 www.cyberneticworld.de
 
