--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -5,6 +5,6 @@
 www.cyberneticworld.de
 
 Wenn du Lust hast dich hier auch zu profilieren. Schreib mich Ingame oder im Teamspeak an. Meine Namen sind:
-Rin, Rinmagic, Reamer, BotschafteRin
+Rin, Rinmagic, Reamer, !BotschafteRin
 
 Ganz wichtig ist auch das Cyberneticworld Forum http://www.cyberneticworld.de/board/index.php
