Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -7,4 +7,4 @@ www.cyberneticworld.de
 Wenn du Lust hast dich hier auch zu profilieren. Schreib mich Ingame oder im Teamspeak an. Meine Namen sind:
 Rin, Rinmagic, Reamer, !BotschafteRin
 
-Ganz wichtig ist auch das Cyberneticworld Forum http://www.cyberneticworld.de/board/index.php
+Ganz wichtig ist auch das [http://www.cyberneticworld.de/board/index.php Cyberneticworld Forum]
